--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -322,12 +322,14 @@
     \subsection{Methods for cross-identification}
     \label{sec:xid-how}
 
+        \begin{sloppypar}
         Most small radio surveys are cross-identified by astronomers, visually comparing the radio image to the optical or infrared image \citep[e.g.][]{norris06,middelberg08}. The largest such catalogue is the ROGUE~I catalogue with over 32~000 cross-identifications \citep{zywucka_catalogue_2020}. The Radio Galaxy Zoo project \citep{banfield15} extended manual cross-identification to larger scales by crowdsourcing, asking volunteers online to cross-identify FIRST and ATLAS resulting in 75~000 cross-identified extended sources. This is the largest manually cross-identified source catalogue ever, by citizen scientists rather than professional astronomers---though this distinction does not seem to matter as the accuracy of cross-identifications in Radio Galaxy Zoo is still quite high, and there is an upper limit to how well even astronomers can cross-identify large surveys \citep[Wong et al., in prep;][]{banfield15}.
+        \end{sloppypar}
 
         \subsubsection{Positional matching}
         \label{sec:xid-posmatch}
 
-            The simplest automated method for cross-identification is simply to look for the closest optical or infrared galaxy to some radio emission, a strategy called \defn{positional matching} or \defn{nearest neighbours}. The distance to the nearest potential host galaxy is usually limited to some small value, so that distant spurious relations are excluded. This distance is usually about $5''$ for infrared and $1''$ for optical but may be much further. Some authors modify this approach to selecting the nearest \emph{bright} galaxy or some other constraints \citep[e.g.][]{kimball08}. This approach generally works quite well for compact objects but extended radio structures may overlap with unrelated galaxies on the sky, leading to spurious cross-identifications.
+            The simplest automated method for cross-identification is simply to look for the closest optical or infrared galaxy to some radio emission, a strategy called \defn{positional matching} or \defn{nearest neighbours}\footnote{Not to be confused with the machine learning algorithm also called `nearest neighbours', which does not make an appearance in this thesis.}. The distance to the nearest potential host galaxy is usually limited to some small value, so that distant spurious relations are excluded. This distance is usually about $5''$ for infrared and $1''$ for optical but may be much further. Some authors modify this approach to selecting the nearest \emph{bright} galaxy or some other constraints \citep[e.g.][]{kimball08}. This approach generally works quite well for compact objects but extended radio structures may overlap with unrelated galaxies on the sky, leading to spurious cross-identifications.
 
             The rate of spurious identification with this approach can be estimated by a simple model, assuming that the true host galaxy is not visible (either too faint or not nearby). Assume that a small circular region of the sky with radius $a$ contains $K$ potential host galaxies. The probability that a randomly selected potential host galaxy is within $r\ \mathrm{rad}$ of a given point is $r^2 / a^2$, with $r < a$. The probability of no potential host galaxy falling within $r\ \mathrm{rad}$ of a given point is therefore $(1 - r^2 / a^2)^K$ and the probability of coincidental cross-identification is $1 - (1 - r^2 / a^2)^K$. The All\emph{WISE} survey contains 747~634~026 infrared sources, over $4\pi\ \mathrm{sr}$, so it has an average source density of approximately $6 \times 10^7\ \mathrm{sr}^{-1}$. With $r = 5''$, and $a = 1^\circ$ (corresponding to an area of $9.57 \times 10^{-4}\ \mathrm{sr}$ and thus 57~420 sources), we have a coincidental cross-identification rate of 10.5 per cent when the host galaxy is not visible.
 
@@ -343,7 +345,7 @@
     
     Unlike emission from galaxies observed at other wavelengths, the extended emission from radio galaxies can be disconnected when observed: a single radio galaxy may appear in observations as multiple discrete components. This is partly due to inhomogeneous emission over the radio galaxy structure---e.g. FRII hot-spots can be much brighter than the rest of the galaxy, so they might be visible while the rest of the galaxy is too faint to see---and partly due to the technique through which many radio observations are made, \defn{interferometry}, which may screen out diffuse emission.
 
-    This potential of a radio galaxy to be split into multiple discrete blobs of emission also leads to a linguistic ambiguity not present at other wavelengths. A \defn{radio source} may be either a single physical object that emits radio, or a single blob of disconnected radio emission. The same is true for \defn{radio object}. There is no agreed-upon terminology. We will therefore adopt the following terminology from this point on, adapted from my paper \citep{alger18radio} based on the Radio Galaxy Zoo terminology: a \defn{radio source} or \defn{radio galaxy} refers to all radio emission observed that comes from a single physical object, and a \defn{radio component} refers to a single, contiguous region of radio emission above the noise level of an observation. We will avoid using \defn{radio object}. Note that in the literature a \defn{radio component} may be either a Gaussian fit to an observation or it may be a region of connected emission; in works where the former is the case (particularly in source-finding literature) the latter is often called a \defn{radio island}.
+    This potential of a radio galaxy to be split into multiple discrete blobs of emission also leads to a linguistic ambiguity not present at other wavelengths. A \defn{radio source} may be either a single physical object that emits radio, or a single blob of disconnected radio emission. The same is true for \defn{radio object}. There is no agreed-upon terminology. We will therefore adopt the following terminology from this point on, adapted from our paper \citep{alger18radio} based on the Radio Galaxy Zoo terminology: a \defn{radio source} or \defn{radio galaxy} refers to all radio emission observed that comes from a single physical object, and a \defn{radio component} refers to a single, contiguous region of radio emission above the noise level of an observation. We will avoid using \defn{radio object}. Note that in the literature a \defn{radio component} may be either a Gaussian fit to an observation or it may be a region of connected emission; in works where the former is the case (particularly in source-finding literature) the latter is often called a \defn{radio island}.
 
     Since radio galaxies can appear disconnected, aggregating observed radio components into physical sources is integral to understanding radio galaxies. Aggregating disparate components into a single source is important for two reasons. Firstly, without all components, the total luminosity of a source is dramatically underestimated. Secondly, we need all components to accurately examine the morphology of the source.
     
