--- a/thesis/rlfs.tex
+++ b/thesis/rlfs.tex
@@ -245,7 +245,7 @@ host'.
 \begin{figure}
     \centering
     \includegraphics{rlf-images/colour-colour.pdf}
-    \caption{\emph{WISE} colour-colour distributions. The dashed grey lines show
+    \caption[\emph{WISE} colour-colour distributions.]{\emph{WISE} colour-colour distributions. The dashed grey lines show
       simple host galaxy class divisions from \citet{jarrett17wise}. These
       classes are labelled in the plot. The blue dot-dashed line shows
       the empirical optical/infrared AGN criteria from \citet{jarrett11wise}. The arrow shows the direction that galaxies would shift with fainter $W3$ magnitudes. The right plot limits the sample to only sources with $W3 \geq 3 \sigma$.
@@ -255,7 +255,7 @@ host'.
   \begin{figure}
       \centering
     \includegraphics{rlf-images/frlf-ir-colours.pdf}
-    \caption{RLFs split by host galaxy
+    \caption[RLFs split by \emph{WISE} colour regions.]{RLFs split by host galaxy
       location in the \emph{WISE} colour-colour plot (\autoref{fig:colour-colour}),
       using our automated cross-identifications. The grey line is the
       total RLF for all sources. Solid lines have good $W3$ detections and dashed lines include $W3$ with low signal-to-noise.
@@ -314,7 +314,7 @@ host'.
       \begin{figure}
           \centering
         \includegraphics{rlf-images/physical-extent.pdf}
-        \caption{Bivariate radio luminosity function showing radio luminosity against projected physical extent. Contours are on a log scale, starting at the median and increasing by 10 percent per contour.
+        \caption[Bivariate radio luminosity function showing radio luminosity against projected physical extent.]{Bivariate radio luminosity function showing radio luminosity against projected physical extent. Contours are on a log scale, starting at the median and increasing by 10 percent per contour.
         \label{fig:fractional-rlf-extent}}
       \end{figure}
 
@@ -476,7 +476,7 @@ Astronomy \citep{astropy18}. Partial support for this work for L.R. and A.F.G. c
   \label{sec:rlfs-giants}
 
     \begin{table*}
-      \caption{\label{tab:grg} Giant radio galaxies found in RGZ-Ex. `LLS' is the projected linear size of the source as measured by the maximum angular distance between radio components. The RA/Dec are the coordinates of the host galaxy. s/p indicates spectroscopic/photometric redshift. ${}^L$Existing in literature. ${}^R$Also found by RGZ citizen scientists. ${}^\dagger$Misidentified SDSS host, manually corrected to obtain redshift.}
+      \caption[Giant radio galaxies found in RGZ-Ex.]{\label{tab:grg} Giant radio galaxies found in RGZ-Ex. `LLS' is the projected linear size of the source as measured by the maximum angular distance between radio components. The RA/Dec are the coordinates of the host galaxy. s/p indicates spectroscopic/photometric redshift. ${}^L$Existing in literature. ${}^R$Also found by RGZ citizen scientists. ${}^\dagger$Misidentified SDSS host, manually corrected to obtain redshift.}
       \begin{footnotesize}\begin{tabular}{c|ccccc}
   \hline
   All\emph{WISE} host (WISEA) & RA (J2000) & Dec (J2000) & $z$ & LLS (Mpc) &\\
@@ -538,7 +538,7 @@ mostly due to sidelobes/artefacts (103), incorrect source grouping (82), or inco
   In \autoref{sec:rlfs-manual-validation} we described our visual verification of the BXID method. We list the radio components in the verification set in \autoref{tab:verification-set}. Each row of the table contains the FIRST component, its All\emph{WISE} host galaxy according to BXID, and whether the association is correct according to our visual verification. If an author was particularly unsure about an object, they were able to skip this object, and so are not accounted for in the verification for that object. Verification was weighted by the \citet{dawid79em} maximum likelihood model.
 
   \begin{table}
-    \caption{\label{tab:verification-set} Validation objects. `Agree' is whether or not the authors agreed with BXID associating the given FIRST object with the given All\emph{WISE} object.}
+    \caption[Validation objects.]{\label{tab:verification-set} Validation objects. `Agree' is whether or not the authors agreed with BXID associating the given FIRST object with the given All\emph{WISE} object.}
       \begin{tabular}{ccc}
         FIRST & All\emph{WISE} & Agree\\\hline
         J000234.9-001421 & J000242.35-001320.5 & n\\
