--- a/thesis/xid.tex
+++ b/thesis/xid.tex
@@ -720,7 +720,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
     \begin{figure}
       \centering
       \includegraphics[width=0.6\columnwidth]{atlas-images/positives.pdf}
-      \caption[Predicted host galaxies in the candidate classification task for ATLAS3~J032929.61-281938.9]{Predicted host galaxies in the candidate classification task for ATLAS3~J032929.61-281938.9. {The background image is an ATLAS radio image.} Radio Galaxy Zoo host galaxies
+      \caption[An example of predicted host galaxies in the candidate classification task.]{Predicted host galaxies in the candidate classification task for ATLAS3~J032929.61-281938.9. {The background image is an ATLAS radio image.} Radio Galaxy Zoo host galaxies
       are marked by crosses. SWIRE candidate host galaxies are circles coloured by {the score output by a logistic regression binary classifier. The scores are thresholded to obtain labels, as when we compute balanced accuracy.} Orange circles have been assigned a `positive' label by a logistic regression binary classifier and white otherwise. {Note that there are more predicted host galaxies than there are radio components, so not all of the predicted host galaxies would be assigned as host galaxies in the cross-identification task.}
       \label{fig:positives}}
     \end{figure}
